<resources>
    <string name="app_name">FireChat</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="create_one"><u>Create one.</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_min">Password (at least 6 characters)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="username_cond">Username (6-15 characters)</string>
    <string name="not_email">Not an email address</string>
    <string name="invalid_username">Invalid username</string>
    <string name="short_password">Password must be at least 6 characters long</string>
    <string name="not_match_password">Password does not match the confirm password</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_home">Conversations</string>
    <string name="title_activity_search">Search for users</string>
</resources>
